<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>ISPW-Project-20-21-final</groupId>
    <artifactId>BSO_project</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
 
    <name>BSO_project</name>
    <url>http://www.example.com</url>
 
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <junit>5.6.2</junit>
        
        <!-- Plugin versions -->
        <maven.shade>3.2.2</maven.shade>
        <maven.clean>3.1.0</maven.clean>
        <maven.resources>3.1.0</maven.resources>
        <maven.compiler>3.8.1</maven.compiler>
        <maven.surefire>3.0.0-M5</maven.surefire>
        <maven.failsafe>2.22.0</maven.failsafe>
        <maven.jar>3.2.0</maven.jar>
        <maven.install>3.0.0-M1</maven.install>
    </properties>

    <dependencies>
        <!-- Dependencies -->
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-base</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-controls</artifactId>
        	<version>11.0.2</version>
        </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-graphics </artifactId>
	        <version>11.0.2</version>
	        <classifier>win</classifier>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-graphics </artifactId>
	        <version>11.0.2</version>
	        <classifier>linux</classifier>
	    </dependency>
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-graphics </artifactId>
	        <version>11.0.2</version>
	        <classifier>mac</classifier>
	    </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-fxml</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.mybatis</groupId>
        	<artifactId>mybatis</artifactId>
        	<version>3.4.5</version>
        </dependency>
        <dependency>
        	<groupId>com.itextpdf</groupId>
        	<artifactId>itextpdf</artifactId>
        	<version>5.5.9</version>
        </dependency>
		<dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
    		<version>8.0.22</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat</artifactId>
			<version>9.0.41</version>
			<type>pom</type>
		</dependency>

	    	
    
        <!-- Testing dependencies-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
		<dependency>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.8.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit5 -->
		<dependency>
		    <groupId>org.testfx</groupId>
		    <artifactId>testfx-junit5</artifactId>
		    <version>4.0.16-alpha</version>
		    <scope>test</scope>
		</dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
        			<release>11</release>
    			</configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
        			<argLine>
            			--illegal-access=permit
		        	</argLine>
		        <skipTests>false</skipTests>
                <testFailureIgnore>true</testFailureIgnore>
		    	</configuration>
		    </plugin>
		    <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>2.22.0</version>
			    <configuration>
			        <argLine>
			            --illegal-access=permit
			        </argLine>
			    </configuration>
			</plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.shade}</version>
                <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                    <goal>shade</goal>
                    </goals>
                    <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                        <mainClass>ISPW_Project_20_21_final.BSO_project.App.Main</mainClass>
                        </transformer>
                    </transformers>
                    </configuration>
                </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>